7月15日的提交

--- a/nav/addfl.html
+++ b/nav/addfl.html
@@ -26,7 +26,7 @@
   如果你要添加我的博客，请根据以下信息添加:
   名称:雾曰
   链接:https://chenwumm.github.io/
-  简介:晨雾㐅是只屑的博客乄一枚小学生的博客
+  简介:晨雾㐅是只屑的博客乄一枚学生党的博客
 </pre>
         </article>
     </main>
