7月20日的提交

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <center><h5 id="running-time"><script src="/js/runtime.js"></script></h5></center>
     <main>
     <section class="posts">
+<pre>2025-07-20 <a href=/posts/花380元把社区升级了一下.html>花380元把社区升级了一下</a></pre>
 <pre>2025-07-18 <a href=/posts/又一篇模拟恐怖文.html>又一篇模拟恐怖文</a></pre>
 <pre>2025-07-05 <a href=/posts/Linux之yes命令你不知道的用法.html>Linux之yes命令你不知道的用法</a></pre>
 <pre>2025-07-04 <a href="/posts/瞎写的模拟恐怖超自然生物档案.html">瞎写的模拟恐怖超自然生物档案</a></pre>
