7月23日的提交

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="雾曰丨晨雾㐅是只屑的博客乄一枚学生党的博客">
     <title>雾曰</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
