2025年07月31日的提交。

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <marquee style="background-color: yellow;">2025-6-14公告:博客从"晨雾博客"改名为"雾曰"</marquee>
     <center><h5 id="running-time"><script src="/js/runtime.js"></script></h5></center>
     <main>
+<pre>2025-07-31 <a href=/post/买的卡祖笛到货了.html>买的卡祖笛到货了</a></pre>
 <pre>2025-07-31 <a href=/posts/买的卡祖笛到货了.html>买的卡祖笛到货了</a></pre>
 <pre>2025-07-28 <a href=/posts/水篇文章.html>水篇文章</a></pre>
     <section class="posts">
