--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <center><h5 id="running-time"><script src="/js/runtime.js"></script></h5></center>
     <main>
 <pre>2025-07-31 <a href=/post/买的卡祖笛到货了.html>买的卡祖笛到货了</a></pre>
+<pre>2025-07-31 <a href=/post/买的卡祖笛到货了.html>买的卡祖笛到货了</a></pre>
 <pre>2025-07-31 <a href=/posts/买的卡祖笛到货了.html>买的卡祖笛到货了</a></pre>
 <pre>2025-07-28 <a href=/posts/水篇文章.html>水篇文章</a></pre>
     <section class="posts">
