--- a/nav/contact.html
+++ b/nav/contact.html
@@ -16,6 +16,7 @@
             <h2>联系我</h2>
             <pre style="white-space: pre-wrap; word-wrap: break-word;">微信:chenwumm1369
 QQ:496163862
+QQ交流频道:pd63217251 <a href="https://pd.qq.com/s/csqh5agsb?b=9">点击直接进入</a>
 邮箱:496163862@qq.com <a href="mailto:496163862@qq.com">直接给我发邮件</a>
 新浪微博:朝雾也乄晨雾 <a href="https://weibo.com/u/7756069076">直接跳转到我的微博主页</a>
 快手:晨雾㐅是只屑
