2025年08月12日的提交。

--- a/nav/fl.html
+++ b/nav/fl.html
@@ -17,6 +17,11 @@
         </article>
         <br>
         <article>
+            <h3><a href="https://boke.lu/" rel="external nofollow">博客录(boke.lu)</a></h3>
+            <pre>boke.lu · 博客收录展示平台~</pre>
+        </article>
+        <br>
+        <article>
             <h3><a href="https://millexi.github.io/" rel="external nofollow">MilleXi's blog</a></h3>
             <pre>MilleXi的个人技术博客</pre>
         </article>
