--- a/nav/about.html
+++ b/nav/about.html
@@ -16,16 +16,16 @@
             <h2>关于我</h2>
             <pre style="white-space: pre-wrap; word-wrap: break-word;"><center><img src="/pic/avatar.jpg" alt="头像" style="width: 150px; height: 150px; border - radius: 50%; object - fit: cover;"><br><h1>晨雾㐅是只屑</h1><cite>"一万年太久，只争朝夕。"<br><p style="text-align: right;">---毛教员</p></cite></center>
             <h2>个人信息</h2><b>姓名</b>:不方便透露哈哈
-<b>年龄</b>:2025年12周岁哈哈
+<b>年龄</b>:2025年12周岁
 <b>性别</b>:男
-<b>身份</b>:六年级小学生/计算机编程爱好者/人
+<b>身份</b>:一枚初中生/计算机编程爱好者/人
             <h2>爱好</h2><ul><li>计算机技术/编程</li>
 <li>密码学</li>
 <li>网络安全</li>
 <li>呼吸</li></ul>
             <h2>所在地区:<a href="https://baidu.com/s?wd=河北">河北</a></h2>
             <h2>自我简介</h2>
-  我的笔名(不如说是网名)叫晨雾,喜欢计算机、编程、密码学等。目前正在上六年级，网站周六周日才能更新，上面头像的人物是英语天天练里我的虚拟人物。不喜勿喷。
+  我的笔名(不如说是网名)叫晨雾,喜欢计算机、编程、密码学等。目前正在上初中，网站周六周日才能更新。
   我只是一名普通的学生，热爱计算机编程科技技术，希望人类能早日实现共产。
             <h2>网站简介</h2>
   网站生日:2024年2月25日 星期日 下午5点22分35秒。
