2025年12月31日的提交。

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <marquee style="background-color: yellow;">2025-6-14公告:博客从"晨雾博客"改名为"雾曰"</marquee>
     <center><h5 id="running-time"><script src="/js/runtime.js"></script></h5></center>
     <main>
+<pre>2025-12-31 <a href=/posts/2025年的最后一篇博客.html>2025年的最后一篇博客</a></pre>
 <pre>2025-12-12 <a href=/posts/现在国内还能用telnet连的BBS论坛.html>现在国内还能用telnet连的BBS论坛</a></pre>
 <pre>2025-10-01 <a href=/posts/开学一个月的感受以及精神状态.html>开学一个月的感受以及精神状态</a></pre>
 <pre>2025-08-30 <a href=/posts/开学前的最后一篇文章.html>开学前的最后一篇文章</a></pre>
