2026年01月01日的提交。

--- a/nav/gopher.html
+++ b/nav/gopher.html
@@ -14,7 +14,9 @@
     <main>
         <article>
             <h2>Gopher Space</h2>
-            <pre style="white-space: pre-wrap; word-wrap: break-word;"><h3>12月13日</h3>
+            <pre style="white-space: pre-wrap; word-wrap: break-word;"><h3>1月1日</h3>
+  用tilde.club再搭建，地址 gopher://tilde.club/1/~chenwu/
+<h3>12月13日</h3>
   用sdf.org创建的一个简单的Gopher Space。
   地址:gopher://sdf.org/1/users/chenwu/
   可以用gopher客户端连接。
