--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <marquee style="background-color: yellow;">2025-6-14公告:博客从"晨雾博客"改名为"雾曰"</marquee>
     <center><h5 id="running-time"><script src="/js/runtime.js"></script></h5></center>
     <main>
+<pre>2026-02-04 <a href=/posts/论“爱国”.html>论“爱国”</a></pre>
 <pre>2026-01-01 <a href=/posts/2026年的第一篇文章.html>2026年的第一篇文章</a></pre>
     </main>
     <br><br><br>
