--- a/nav/contact.html
+++ b/nav/contact.html
@@ -14,19 +14,11 @@
     <main>
         <article>
             <h2>联系我</h2>
-            <pre style="white-space: pre-wrap; word-wrap: break-word;">微信:chenwumm1369
-QQ:496163862
+            <pre style="white-space: pre-wrap; word-wrap: break-word;">
 QQ交流频道:pd63217251 <a href="https://pd.qq.com/s/csqh5agsb?b=9">点击直接进入</a>
-邮箱:496163862@qq.com <a href="mailto:496163862@qq.com">直接给我发邮件</a>
+邮箱:chenwumm@qq.com <a href="mailto:chenwumm@qq.com">直接给我发邮件</a>
 新浪微博:朝雾也乄晨雾 <a href="https://weibo.com/u/7756069076">直接跳转到我的微博主页</a>
-快手:晨雾㐅是只屑
-抖音:晨雾㐅是只屑
 哔哩哔哩:晨雾㐅是只屑 <a href="https://space.bilibili.com/513639404">直接跳转到我的哔哩哔哩主页</a>
-百度(包括网盘，文心一言):朝雾也乄晨雾
-CSDN(已退):晨雾㐅是只屑
-英语天天练(经常上):晨雾㐅是只屑 搜不到直接搜晨雾㐅
-题王争霸:晨雾㐅是只屑
-多邻国(已退):晨雾㐅是只屑丶已退勿念 <a href="https://www.duolingo.com/profile/Chenwu-Of-Jixima">直接访问我的多邻国主页</a></pre>
         </article>
     </main>
 <br><br><br>
