2026年02月13日的提交。

--- a/nav/gemini.html
+++ b/nav/gemini.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WuYueGopher</title>
+    <title>WuYueGemini</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -13,13 +13,9 @@
     </header>
     <main>
         <article>
-            <h2>WuYueGopher</h2>
-            <pre style="white-space: pre-wrap; word-wrap: break-word;"><h3>1月1日</h3>
-  用tilde.club再搭建，地址 gopher://tilde.club/1/~chenwu/
-<h3>12月13日</h3>
-  用sdf.org创建的一个简单的Gopher Space。
-  地址:gopher://sdf.org/1/users/chenwu/
-  可以用gopher客户端连接。
+            <h2>WuYueGemini</h2>
+            <pre style="white-space: pre-wrap; word-wrap: break-word;"><h3>2月13日</h3>
+gemini://tilde.club/~chenwu
 </pre>
         </article>
     </main>
