--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <marquee style="background-color: yellow;">2025-6-14公告:博客从"晨雾博客"改名为"雾曰"</marquee>
     <center><h5 id="running-time"><script src="/js/runtime.js"></script></h5></center>
     <main>
+<pre>2026-02-16 <a href=/posts/《从PLATO到社交媒体革命》翻译.html>《从PLATO到社交媒体革命》翻译</a></pre>
 <pre>2026-02-14 <a href=/posts/《黑客宣言》中文翻译.html>《黑客宣言》中文翻译</a></pre>
 <pre>2026-02-04 <a href=/posts/何为“开源”？.html>何为“开源”？</a></pre>
 <pre>2026-02-04 <a href=/posts/论“爱国”.html>论“爱国”</a></pre>
