2026年02月17日的提交。

--- a/nav/addfl.html
+++ b/nav/addfl.html
@@ -20,7 +20,7 @@
 2.文章数量不限制
 3.合法合规、最好是博客。
 <h1>如何添加</h1>
-  发邮件到邮箱<a href="mailto:496163862@qq.com">496163862@qq.com</a>或者直接加QQ:496163862 微信:chenwumm1369
+  发邮件到邮箱<a href="mailto:chenwumm@qq.com">chenwumm@qq.com</a>
   最好是在周六周日发。发信息时请附上你的网站名称、链接和简介
 <h1>添加我的博客</h1>
   如果你要添加我的博客，请根据以下信息添加:
