2026年02月17日的提交。

--- a/nav/contact.html
+++ b/nav/contact.html
@@ -15,9 +15,11 @@
         <article>
             <h2>联系我</h2>
             <pre style="white-space: pre-wrap; word-wrap: break-word;">
+豆瓣ID:chenwumm <a href="https://douban.com/people/chenwumm">点击直接进入</a>
+知乎:晨雾乄是只屑 <a href="https://www.zhihu.com/people/ilvnsvc">点击直接进入</a>
 QQ交流频道:pd63217251 <a href="https://pd.qq.com/s/csqh5agsb?b=9">点击直接进入</a>
 邮箱:chenwumm@qq.com <a href="mailto:chenwumm@qq.com">直接给我发邮件</a>
-新浪微博:朝雾也乄晨雾 <a href="https://weibo.com/u/7756069076">直接跳转到我的微博主页</a>
+新浪微博:晨雾乄是只屑 <a href="https://weibo.com/u/7756069076">直接跳转到我的微博主页</a>
 哔哩哔哩:晨雾㐅是只屑 <a href="https://space.bilibili.com/513639404">直接跳转到我的哔哩哔哩主页</a>
         </article>
     </main>
