2026年03月02日的提交。

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <marquee style="background-color: yellow;">2025-6-14公告:博客从"晨雾博客"改名为"雾曰"</marquee>
     <center><h5 id="running-time"><script src="/js/runtime.js"></script></h5></center>
     <main>
+<pre>2026-03-02 <a href=/posts/CSDN拉完了.html>CSDN拉完了</a></pre>
 <pre>2026-02-17 <a href=/posts/给林纳斯的邮件.html>给林纳斯的邮件</a></pre>
 <pre>2026-02-16 <a href=/posts/2026新年快乐！.html>2026新年快乐！</a></pre>
 <pre>2026-02-16 <a href=/posts/《从PLATO到社交媒体革命》翻译.html>《从PLATO到社交媒体革命》翻译</a></pre>
